Fix wrap in pre element

--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -121,6 +121,7 @@ pre {
 	font-size: 13px;
 	line-height: 1.5;
 	color: #9da6b8;
+	white-space: pre-wrap;
 }
 
 input {
